# rl-cloud-resource-allocator

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: streamlit_dashboard.py
config/: burst.yaml  default.yaml  spike.yaml
logs/: live_simulation.csv  training_log.csv
models/: vec_normalize.pkl
scripts/: run_demo.sh
src/: __init__.py  baselines.py  callbacks.py  config.py  evaluate.py  train.py
src/envs/: __init__.py  cloud_env.py
tests/: test_cloud_env.py
